Added controls for firing missiles/rockets/bombs Added control for setting landing gear system to neutral

--- a/MiG-21Bis/VPC MongoosT-50CM3 {956B5300-1451-11ef-8001-444553540000}.html
+++ b/MiG-21Bis/VPC MongoosT-50CM3 {956B5300-1451-11ef-8001-444553540000}.html
@@ -1205,7 +1205,7 @@
           <td>d3120pnilunilcd14vd1vpnilvunil</td>
         </tr>
         <tr>
-          <td></td>
+          <td>JOY_BTN21</td>
           <td>Gears Handle Neutral</td>
           <td>Gears, brakes and chute</td>
           <td>d3121pnilunilcd14vd0vpnilvunil</td>
