Remapped buttons for brake chute Added button for dropping RATO packs Added trim controls

--- a/MiG-21Bis/VPC MongoosT-50CM3 {956B5300-1451-11ef-8001-444553540000}.html
+++ b/MiG-21Bis/VPC MongoosT-50CM3 {956B5300-1451-11ef-8001-444553540000}.html
@@ -389,7 +389,7 @@
           <td>d3002pnilunilcd1vd1vpnilvunil</td>
         </tr>
         <tr>
-          <td>JOY_BTN57</td>
+          <td>JOY_BTN21</td>
           <td>Button Cap Open/Close (for Disconnect Drag Chute)</td>
           <td>Gears, brakes and chute</td>
           <td>d3129pnilunilcd16vd1vpnilvunil</td>
@@ -743,13 +743,13 @@
           <td>d3003pnilunilcd1vd1vpnilvunil</td>
         </tr>
         <tr>
-          <td>JOY_BTN34</td>
+          <td>JOY_BTN37</td>
           <td>Drag Chute - Activate</td>
           <td>Gears, brakes and chute</td>
           <td>d3128pnilu3128cd16vd1vpnilvu0</td>
         </tr>
         <tr>
-          <td>JOY_BTN35</td>
+          <td>JOY_BTN37_OFF</td>
           <td>Drag Chute - Disconnect</td>
           <td>Gears, brakes and chute</td>
           <td>d3130pnilu3130cd16vd1vpnilvu0</td>
@@ -767,7 +767,7 @@
           <td>d3196pnilu3196cd42vd1vpnilvu0</td>
         </tr>
         <tr>
-          <td></td>
+          <td>JOY_BTN33</td>
           <td>Drop Countermeasures (ASO and SPS-141)</td>
           <td>SPRD or ASO Chaff/Flares</td>
           <td>d357pnilu358cdnilvdnilvpnilvunil</td>
@@ -1199,13 +1199,13 @@
           <td>d3120pnilunilcd14vd0vpnilvunil</td>
         </tr>
         <tr>
-          <td>JOY_BTN56</td>
+          <td></td>
           <td>Gears Handle Lock released</td>
           <td>Gears, brakes and chute</td>
           <td>d3120pnilunilcd14vd1vpnilvunil</td>
         </tr>
         <tr>
-          <td>JOY_BTN21</td>
+          <td></td>
           <td>Gears Handle Neutral</td>
           <td>Gears, brakes and chute</td>
           <td>d3121pnilunilcd14vd0vpnilvunil</td>
@@ -2411,13 +2411,13 @@
           <td>d3131pnilunilcd9vd1vpnilvunil</td>
         </tr>
         <tr>
-          <td></td>
+          <td>JOY_BTN15</td>
           <td>Trim Pitch Down</td>
           <td>Flight Controls</td>
           <td>d3132pnilu3132cd9vd1vpnilvu0</td>
         </tr>
         <tr>
-          <td></td>
+          <td>JOY_BTN14</td>
           <td>Trim Pitch Up</td>
           <td>Flight Controls</td>
           <td>d3240pnilu3240cd9vd-1vpnilvu0</td>
@@ -2603,7 +2603,7 @@
           <td>d3192pnilunilcd42vd1vpnilvunil</td>
         </tr>
         <tr>
-          <td>JOY_BTN11; JOY_BTN9</td>
+          <td></td>
           <td>Wheel Brakes</td>
           <td>Gears, brakes and chute</td>
           <td>d74pnilu75cdnilvdnilvpnilvunil</td>
