Fixed: Add Radar Controls

--- a/MiG-21Bis/LEFT VPC MongoosT-50CM3 {8B6A35E0-58A0-11ef-8001-444553540000}.html
+++ b/MiG-21Bis/LEFT VPC MongoosT-50CM3 {8B6A35E0-58A0-11ef-8001-444553540000}.html
@@ -2351,13 +2351,13 @@
           <td>dnilp3362u3362cd41vdnilvp-0.01vunil</td>
         </tr>
         <tr>
-          <td></td>
+          <td>JOY_BTN17</td>
           <td>TDC Range / Pipper Span +</td>
           <td>Radar and SPO</td>
           <td>dnilp3704unilcd41vdnilvp0.01vu0</td>
         </tr>
         <tr>
-          <td></td>
+          <td>JOY_BTN19</td>
           <td>TDC Range / Pipper Span -</td>
           <td>Radar and SPO</td>
           <td>dnilp3204unilcd41vdnilvp0.01vu0</td>
