--- a/MiG-21Bis/RIGHT VPC Stick WarBRD-D {2D824510-3C5A-11ef-8001-444553540000}.html
+++ b/MiG-21Bis/RIGHT VPC Stick WarBRD-D {2D824510-3C5A-11ef-8001-444553540000}.html
@@ -2333,7 +2333,7 @@
           <td>d3173pnilunilcd42vd1vpnilvunil</td>
         </tr>
         <tr>
-          <td></td>
+          <td>JOY_BTN6</td>
           <td>Target Lock On</td>
           <td>Radar and SPO</td>
           <td>d3190pnilu3190cd40vd1vpnilvu0</td>
